SonarQube changes